# drawnix_dds

./: .dockerignore  .gitignore  AGENTS.md  CFPAGE-DEPLOY.md  CHANGELOG.md  DDS_INTEGRATION_SUMMARY.md  Dockerfile  LICENSE  README.md  README_en.md  WHITEBOARD_SYNC_GUIDE.md  nx.json  package-lock.json  package.json  pnpm-lock.yaml  test_dds.sh  test_whiteboard_sync.sh  tsconfig.base.json
.cursor/: mcp.json
.github/workflows/: ci.yml  publish.yml
apps/web/: index.html  jest.config.ts  project.json  vite.config.ts
apps/web-e2e/: playwright.config.ts  project.json
apps/web-e2e/src/: example.spec.ts
apps/web/public/: _headers  _redirects  robots.txt  sitemap.xml
apps/web/src/: styles.scss
apps/web/src/app/: app.spec.tsx  app.tsx  geometry-types.ts  initialize-data.ts
dds_subscriber/: Cargo.toml  README.md  drawnix-dds-subscriber.ddslog
dds_subscriber/src/: main.rs
scripts/: publish.js  release-version.js
src-tauri/: 1757408358436.drawnix  1757408364422.drawnix  Cargo.toml  drawnix-tauri.ddslog  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  dds_manager.rs  dds_test.rs  main.rs  shared_types.rs
test_publisher/: Cargo.toml  ZRDDS_QOS_PROFILES.xml  test_publisher.ddslog
test_publisher/src/: main.rs
