[package]
name = "drawnix-dds-subscriber"
version = "0.1.0"
edition = "2021"

[dependencies]
zrdds-safe = { path = "../../zrdds-rust/zrdds-safe", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
colored = "2.0"
ctrlc = "3.4"
