[package]
name = "drawnix-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta.20", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.20", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zrdds-safe = { path = "/mnt/f/zrdds-rust/zrdds-safe"}
lazy_static = "1.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
